与江老师共勉

--- a/core/templates/backend/Document.html
+++ b/core/templates/backend/Document.html
@@ -15,7 +15,7 @@
 
              <!--内容开始-->
             <div id="main" class="col-sm-1  col-md-12 col-lg-12 lefrgit">
-                <form method="post" action="content_1.html">
+                <form method="post" action="edit_content.html">
                     <h1 class="page-header">管理</h1>
                     <div class="table-responsive">
                         <table class="table table-striped table-hover">
