--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -2,6 +2,9 @@
 
 {% block head %}
     <script type="text/javascript">
+        $(document).ready(function () {
+            $('#home').prop('class', 'actived');
+        });
         /*var a,b,c;
         a=$("#dh").offset().top;//元素相对于窗口的距离
         b=$(window).scrollTop(); //监控窗口已滚动的距离;
@@ -50,19 +53,19 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
             <div class="item active">
-              <img src="/static/images/img_bg_1.jpg" style="width: 100%;"  alt="...">
+              <img src="/static/images/img_bg_2.jpg" style="width: 100%;"  alt="...">
               <div class="carousel-caption">
                 ...
               </div>
             </div>
             <div class="item">
-              <img src="/static/images/img_bg_1.jpg" style="width: 100%;" alt="...">
+              <img src="/static/images/img_bg_2.jpg" style="width: 100%;" alt="...">
               <div class="carousel-caption">
                 ...
               </div>
             </div>
               <div class="item">
-              <img src="/static/images/img_bg_1.jpg" style="width: 100%;" alt="...">
+              <img src="/static/images/img_bg_2.jpg" style="width: 100%;" alt="...">
               <div class="carousel-caption">
                 ...
               </div>
@@ -154,7 +157,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>高中申请及监管服务</h3>
-							<p>浩哥sb.Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+							<p>浩哥sb. Eos cumque dicta adipisci architecto culpa amet.</p>
 						</div>
 					</div>
 
@@ -164,7 +167,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>快速本科／硕士项目独家总代理</h3>
-							<p>浩哥sb.Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+							<p>浩哥sb. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 						</div>
 					</div>
 
@@ -177,7 +180,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>开除应对方案</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+							<p> Eos cumque dicta adipisci architecto culpa amet.</p>
 						</div>
 					</div>
 
@@ -187,7 +190,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>签证和法律咨询服务</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+							<p> Eos cumque dicta adipisci architecto culpa amet.</p>
 						</div>
 					</div>
 
@@ -197,7 +200,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>常春藤名师VIP申请</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+							<p>Eos cumque dicta adipisci architecto culpa amet.</p>
 						</div>
 					</div>
 
