--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -39,10 +39,10 @@
 				</div>
 				<div class="col-xs-10 text-center menu-1">
 					<ul>
-                        <li><a href="#" class="active">首页</a></li>
+                        <li><a href="/" id="home">首页</a></li>
                         <li><a href="#">学历学位认证</a></li>
                         <li><a href="#">留学教育咨询</a></li>
-                        <li><a href="#">海外课程辅导</a></li>
+                        <li><a href="/courseguide" id="course_guide">海外课程辅导</a></li>
                         <li><a href="#">海归职业规划</a></li>
                         <li><a href="#">创业贷款申请</a></li>
                         <li><a href="#">工作签证申请</a></li>
@@ -104,27 +104,24 @@
 						<li><a href="#">Help</a></li>
 						<li><a href="#">Contact</a></li>
 						<li><a href="#">Terms</a></li>
-						<li><a href="#">Meetups</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="hxco-footer-links">
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Handbook</a></li>
-						<li><a href="#">Held Desk</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Help</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Terms</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="hxco-footer-links">
-						<li><a href="#">Find Designers</a></li>
-						<li><a href="#">Find Deelopers</a></li>
-						<li><a href="#">Teams</a></li>
-						<li><a href="#">Advertise</a></li>
-						<li><a href="#">API</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Help</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Terms</a></li>
 					</ul>
 				</div>
 			</div>
@@ -152,8 +149,6 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-
-
 
 	<!-- jQuery Easing -->
 	<script src="/static/js/headerjs/jquery.easing.1.3.js"></script>
