--- a/core/templates/web/course-guide.html
+++ b/core/templates/web/course-guide.html
@@ -48,7 +48,7 @@
             <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
                 <a href="#">
                     <span class="icon">
-                        <i class="icon-flow-tree"></i>
+                        <i class="icon-play"></i>
                     </span>
                     <p>icar</p>
                 </a>
@@ -56,7 +56,7 @@
             <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
                 <a href="#">
                     <span class="icon">
-                        <i class="icon-sound-mute"></i>
+                        <i class="icon-facebook"></i>
                     </span>
                     <p>iass</p>
                 </a>
